app/javascript/flavours/polyam/components/badge/styles.module.scss
.badge {
  // Polyam: Keep old design
  --user-role-background: rgb(from var(--color-text-primary) r g b / 10%);
  --user-role-border: rgb(from var(--color-text-primary) r g b / 50%);
  --user-role-text: var(--color-text-primary);

  border: 1px solid var(--user-role-border);
  color: var(--user-role-text);
  font-size: 13px;
  display: inline-flex;
  max-width: 100%;
  padding: 4px;
  gap: 4px;
  border-radius: 8px;
  align-items: center;
  overflow-wrap: anywhere;

  > svg {
    width: auto;
    height: 12px; // Polyam: Reduced icon size
    fill: currentColor;
    opacity: 0.85;
    padding: 2px; // Polyam: Add padding to match previous design
  }

  a {
    color: inherit;
    text-decoration: none;
  }

  &:not(.badgeWithoutIcon) {
    padding-inline-end: 8px;
  }
}

.domain {
  opacity: 0.75;
  letter-spacing: 0;
}

.default {
  background-color: var(--user-role-background);
}

.subtle {
  background-color: var(--color-bg-brand-softest);
}

.feature {
  background-color: var(--color-bg-brand-base);
  color: var(--color-text-on-brand-base);
}

.inverted {
  background-color: var(--color-bg-inverted);
  color: var(--color-text-inverted);
}

.success {
  background-color: var(--color-bg-success-softest);
}

.warning {
  background-color: var(--color-bg-warning-softest);
  color: var(--color-text-warning);
}

.danger {
  background-color: var(--color-bg-error-base);
  color: var(--color-text-on-error-base);
}

